Probably fixed code block text wrapping

--- a/langwatcher-site/themes/hello-friend/source/css/main.css
+++ b/langwatcher-site/themes/hello-friend/source/css/main.css
@@ -163,6 +163,7 @@ pre {
     margin: 0;
     padding: 0;
     font-size: .9rem;
+    white-space: pre-wrap;
 
     .dark-theme & {
       color: inherit;
